--- a/index.html
+++ b/index.html
@@ -14,7 +14,39 @@
     
 </head>
 <body>
-    
+
+    <!-- Input form -->
+<div class="container">
+        <div class="jumbotron jumbotron-fluid">
+                <div class="container">
+                  <h1 class="display-4">Fluid jumbotron</h1>
+                  <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+                </div>
+              </div>
+    <form>
+        <div><h2>Header</h2></div>
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Search Term: </label>
+              <input type="email" class="form-control" id="exampleFormControlInput1">
+            </div>
+            <div class="form-group">
+              <label for="exampleFormControlSelect1">Number of Records to Retrieve: </label>
+              <select class="form-control" id="exampleFormControlSelect1">
+                <option>1</option>
+                <option>5</option>
+                <option>10</option>
+              </select>
+            </div>
+            <div class="form-group">
+                    <label for="exampleFormControlTextarea1">Start Year(Optional):</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                  </div>
+            <div class="form-group">
+              <label for="exampleFormControlTextarea2">End Year(Optional):</label>
+              <textarea class="form-control" id="exampleFormControlTextarea2" rows="3"></textarea>
+            </div>
+          </form>
+        </div>
 
         <!-- Bootstrap -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
