--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                 <textarea class="form-control" id="exampleFormControlTextarea2" rows="3"></textarea>
             </div>
         </form>
+        <button class="btn" id="searchBtn">Search!</button>
     </div>
 
     <!-- Bootstrap -->
