--- a/index.html
+++ b/index.html
@@ -17,14 +17,15 @@
 
     <!-- Input form -->
 <div class="container">
-        <div class="jumbotron jumbotron-fluid">
+        <div class="jumbotron">
                 <div class="container">
-                  <h1 class="display-4">Fluid jumbotron</h1>
-                  <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+                  <h1 class="display-4">New York Times Search</h1>
+                  <!-- <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p> -->
                 </div>
               </div>
     <form>
-        <div><h2>Header</h2></div>
+        <div class="form">
+        <div class="form-header"><h4>Search Parameters</h4></div>
             <div class="form-group">
               <label for="exampleFormControlInput1">Search Term: </label>
               <input type="email" class="form-control" id="exampleFormControlInput1">
@@ -46,6 +47,7 @@
               <textarea class="form-control" id="exampleFormControlTextarea2" rows="3"></textarea>
             </div>
           </form>
+        </div>
         </div>
 
         <!-- Bootstrap -->
