--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
         <button class="btn" id="searchBtn">Search!</button>
     </div>
 
+    <div class="results"></div>
+
     <!-- Bootstrap -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
