--- a/index.html
+++ b/index.html
@@ -22,14 +22,11 @@
     <div class="container">
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-                <h1 class="display-4">Fluid jumbotron</h1>
+                <h1 class="display-4"></h1>
                 <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
             </div>
         </div>
-        <form>
-            <div>
-                <h2>Header</h2>
-            </div>
+        <form class="form">
             <div class="form-group">
                 <label for="exampleFormControlInput1">Search Term: </label>
                 <input type="email" class="form-control" id="exampleFormControlInput1">
@@ -51,6 +48,19 @@
                 <textarea class="form-control" id="exampleFormControlTextarea2" rows="3"></textarea>
             </div>
         </form>
+
+        <div class="card">
+            <div class="card-header">
+            Top Articles
+            </div>
+            <div class="card-body">
+              <blockquote class="blockquote mb-0">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+              </blockquote>
+            </div>
+          </div>
+
     </div>
 
     <!-- Bootstrap -->
