--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="form-group">
                     <label for="exampleFormControlInput1">Search Term: </label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1">
+                    <input type="search" class="form-control" id="exampleFormControlInput1">
                 </div>
                 <div class="form-group">
                     <label for="exampleFormControlSelect1">Number of Records to Retrieve: </label>
