--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <div class="container">
         <div class="jumbotron">
             <div class="container">
-                <h1 class="display-4"></h1>
-                <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+                <h1 class="display-4">New York Times Search</h1>
             </div>
         </div>
         <form class="form">
+            <div class="card-header">Search Parameters</div>
             <div class="form-group">
                 <label for="exampleFormControlInput1">Search Term: </label>
                 <input type="email" class="form-control" id="exampleFormControlInput1">
