--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
         crossorigin="anonymous">
+    
+     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/reset.css" />
     <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
@@ -47,8 +49,8 @@
                 <label for="exampleFormControlTextarea2">End Year(Optional):</label>
                 <textarea class="form-control" id="exampleFormControlTextarea2" rows="3"></textarea>
             </div>
-            <button type="button" class="btn btn-primary btn-sm" id="searchBtn">Search</button>
-            <button type="button" class="btn btn-secondary btn-sm">Clear Results</button>
+            <button type="button" id =button class="btn btn-primary btn-lg"><i class="fas fa-search"></i>Search</button>
+            <button type="button" id =button class="btn btn-secondary btn-lg"><i class="fas fa-trash-alt"></i>Clear Results</button>
         </form>
 
         <div class="card">
