--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
             <div class="card-header">Search Parameters</div>
             <div class="form-group">
                 <label for="exampleFormControlInput1">Search Term: </label>
-                <input type="email" class="form-control" id="exampleFormControlInput1">
+                <input type="email" class="form-control" id="searchTerm">
             </div>
             <div class="form-group">
                 <label for="exampleFormControlSelect1">Number of Records to Retrieve: </label>
-                <select class="form-control" id="exampleFormControlSelect1">
+                <select class="form-control" id="recordNum">
                     <option>1</option>
                     <option>5</option>
                     <option>10</option>
