--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
             <button type="button" id="searchBtn" class="btn btn-primary btn-lg">
                 <i class="fas fa-search"></i>Search</button>
-            <button type="button" id="" class="btn btn-secondary btn-lg">
+            <button type="button" id="clearBtn" class="btn btn-secondary btn-lg">
                 <i class="fas fa-trash-alt"></i>Clear Results</button>
         </form>
 
