--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                 </select>
             </div>
             <div class="form-group">
-                <label>Start Year(Optional):</label>
-                <input type="text" class="form-control" id="exampleFormControlTextarea1" rows="3">
+                <label>Start Year (Optional):</label>
+                <input type="text" class="form-control" id="startYear" rows="3" minlength="4" maxlength="4">
                 </textarea>
             </div>
             <div class="form-group">
-                <label>End Year(Optional):</label>
-                <input type="text" class="form-control" id="exampleFormControlTextarea2" rows="3">
+                <label>End Year (Optional):</label>
+                <input type="text" class="form-control" id="endYear" rows="3" minlength="4" maxlength="4">
                 </textarea>
             </div>
             <button type="button" id="searchBtn" class="btn btn-primary btn-lg">
