clear result fix

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     <div class="container">
         <div class="jumbotron">
             <div class="container">
-                <h1 class="display-4">New York Times Search</h1>
+                <h1 class="display-4">New York Times</h1>
+                <h3>Article Search</h3>
             </div>
         </div>
         <form class="form">
@@ -52,13 +53,13 @@
                 <input type="text" class="form-control" id="endYear" rows="3" minlength="4" maxlength="4">
                 </textarea>
             </div>
-            <button type="button" id="searchBtn" class="btn btn-primary btn-lg">
+            <button type="button" id="searchBtn" class="btn blueBg">
                 <i class="fas fa-search"></i>&nbsp;Search</button>
-            <button type="button" id="clearBtn" class="btn btn-secondary btn-lg">
+            <button type="button" id="clearBtn" class="btn btn-secondary">
                 <i class="fas fa-trash-alt"></i>&nbsp;Clear Results</button>
         </form>
 
-        <div class="card">
+        <div class="form topArticles">
             <div class="card-header">
                 Top Articles
             </div>
