--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
         <div class="jumbotron">
             <div class="container">
-                <h1 class="display-4">New York Times</h1>
+                <h1 class="display-4">The New York Times</h1>
                 <h3>Article Search</h3>
             </div>
         </div>
